--- a/portalrbo/cidadao.html
+++ b/portalrbo/cidadao.html
@@ -194,18 +194,6 @@
                 </div>
                 </div><!-- End Portfolio Item -->
 
-                <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-app">
-                    <div class="portfolio-content h-10">
-                    <div class="d-flex justify-content-center">
-                    <img src="https://img.icons8.com/?size=100&id=w6AbW6OxVNMw&format=png&color=000000" class="img-fluid" alt="">
-                    </div>
-                    <div class="portfolio-info">
-                    <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-iptu/" title="Veja" target="_blank">Emissão de Alvará</a></h4>
-                    <p>A emissão de alvarás autoriza atividades e garante a conformidade com a lei.</p>
-                    </div>
-                    </div>
-                    </div><!-- End Portfolio Item -->
-
                     <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-app">
                         <div class="portfolio-content h-10">
                         <div class="d-flex justify-content-center">
@@ -213,15 +201,17 @@
                         </div>
                         <div class="portfolio-info">
                         <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-boletim-de-cadastro-mobiliario/" title="Emissão do Boletim de Cadastro Mobiliário" target="_blank">Emissão do Boletim de Cadastro Imobiliário</a></h4>
-                        <p>A emissão do Boletim de Cadastro Imobiliário permite gerar relatórios detalhados sobre imóveis pelo portal do contribuinte./p>
+                        <p>A emissão do Boletim de Cadastro Imobiliário permite gerar relatórios detalhados sobre imóveis pelo portal do contribuinte.
                         </div>
                         </div>
                         </div>
             <!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                  <img src="https://img.icons8.com/?size=100&id=cixhvTdcE7yp&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-boletim-de-cadastro-imobiliario/" title="Consulta de Imóveis e Emissão do Boletim de Cadastro Imobiliário" target="_blank">Consulta e Impressão de imóveis</a></h4>
                   <p>O serviço de Consulta e Impressão de Imóveis permite que as pessoas acessem informações detalhadas sobre imóveis registrados e imprimam relatórios diretamente através do Portal do Contribuinte.</p>
@@ -229,9 +219,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                  <img src="https://img.icons8.com/?size=100&id=53869&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/nota-avulsa/" title="Emissão/Consulta de Notas Fiscais Avulsas" target="_blank">Emissão/Consulta de Notas Fiscais Avulsas</a></h4>
                   <p>O serviço de Emissão e Consulta de Notas Fiscais Avulsas disponibiliza a geração e o acompanhamento de notas fiscais através do Portal do Contribuinte.</p>
@@ -239,9 +231,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=oBnIk7m68OyM&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://riobranco.g-mus.com.br/consultapaciente#laboratorio" title="Consulta dos Resultados de Exames Laboratoriais" target="_blank">Consulta de Exames Laboratoriais</a></h4>
                   <p>O serviço de Consulta de Exames Laboratoriais permite aos contribuintes acessar de forma rápida e prática os resultados de exames realizados em unidades de saúde vinculadas ao Sistema Único de Saúde (SUS) através do Portal do Contribuinte. </p>
@@ -249,9 +243,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=66302&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/empresas/" title="Consulta e Emissão de Alvarás" target="_blank">Emissão de Alvará</a></h4>
                   <p>O serviço de Emissão de Alvará permite que empresários e gestores de empresas solicitem e obtenham alvarás necessários para o funcionamento de seus negócios dentro do município.</p>
@@ -259,9 +255,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10"> 
+              <div class="d-flex justify-content-center">            
+                <img src="https://img.icons8.com/?size=100&id=zDzeNPbfSnjp&format=png" class="img-fluid" alt="">
+              </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/consulta-de-debitos/" title="Consulta e Emissão de Dívidas para a Quitação de Débitos" target="_blank">Consulta de Débitos</a></h4>
                   <p>O serviço de Consulta de Débitos oferece ao contribuinte a possibilidade de verificar e acompanhar suas pendências financeiras com a prefeitura de maneira rápida e prática através do Portal do Contribuinte</p>
@@ -269,9 +267,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="assets/img/portfolio/ITBI.png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/itbis/" title="Consulta e Emissão de Laudos de ITBI" target="_blank">Emissão de Laudos de ITBI (Imposto de Transmissão de Bens Imóveis)</a></h4>
                   <p>O serviço de Emissão de Laudos de ITBI permite que o contribuinte solicite e obtenha laudos técnicos referentes ao ITBI, um imposto municipal incidente sobre a transferência de imóveis. </p>
@@ -279,9 +279,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=67360&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/solicitacao-de-certidao/" title="Emissão de Certidão" target="_blank">Emissão de Certidão</a></h4>
                   <p>O serviço de Emissão de Certidão permite que os cidadãos solicitem e obtenham certidões negativas e positivas relacionadas a bens imóveis ou débitos, bem como certidões de cadastro imobiliário, diretamente pelo portal da prefeitura.</p>
@@ -289,9 +291,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=QL2ikSexUvNU&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/servidor/questionario/acesso/" title="Responder Questionário" target="_blank">Responder Questionário</a></h4>
                   <p>Questionário anual destinado aos servidores públicos do município.</p>
@@ -299,9 +303,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=2NWzY02Z9vOC&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/consulta-de-protocolo/" title="Consulta e Emissão de Processos" target="_blank">Localização de Processos</a></h4>
                   <p>O serviço de Consulta e Emissão de Processos permite a acesso às informações detalhadas e atualizadas sobre processos registrados na prefeitura.</p>
@@ -309,9 +315,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=53861&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-issqn-fixo/" title="Emissão de ISSQN Fixo" target="_blank">Emissão de ISSQN Fixo</a></h4>
                   <p>O serviço de Emissão de ISSQN Fixo permite que as pessoas solicitem e imprimam a guia de pagamento do Imposto Sobre Serviços (ISSQN) no regime fixo diretamente pelo Portal do Contribuinte.</p>
@@ -319,9 +327,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=34062&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/contracheque/" title="Emissão do Contracheque" target="_blank">Emissão do Contracheque</a></h4>
                   <p>Permite a emissão do contracheque dos servidores municipais.</p>
@@ -329,9 +339,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=QCORkpVihxAk&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/fale-conosco/" title="Entre em contato com a Prefeitura" target="_blank">Entre em Contato/Fale Conosco</a></h4>
                   <p>Utilize este canal para enviar dúvidas, sugestões, reclamações ou elogios. Estamos aqui para ajudar!</p>
@@ -339,9 +351,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=111399&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://www.ac.gov.br/oca/" title="Guia de Serviços Públicos" target="_blank">Guia de Serviços Públicos</a></h4>
                   <p>Encontre informações sobre os serviços oferecidos pela prefeitura através da OCA (Organização em Centros de Atendimento), incluindo como acessá-los e quais documentos são necessários.</p>
@@ -349,9 +363,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=W28azECz06zJ&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/solicitacao-cadastro/" title="Solicitação de Cadastro" target="_blank">Solicitação de Cadastro</a></h4>
                   <p>Solicite o seu cadastro diretamente pelo portal.</p>
