--- a/portalrbo/cidadao.html
+++ b/portalrbo/cidadao.html
@@ -375,18 +375,22 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=119540&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/autenticidade-de-documentos/" title="Autenticidade de Documentos">Autenticidade de Documentos</a></h4>
                   <p>Verifique a autenticidade de alguns documentos emitidos pela prefeitura diretamente pelo Portal do Contribuinte</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=23340&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="http://www2.riobranco.ac.gov.br/validarDocs/validarAlvara.php" title="Verificação de Autenticidade do Alvará de Construção" target="_blank">Autenticidade do Alvará de Construção</a></h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -394,9 +398,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=fVDlEADieTbQ&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="http://www2.riobranco.ac.gov.br/validarDocs/validarHabitese.php" title="Verificação de Autenticidade do Termo de Habite-se" target="_blank">Autenticidade do Termo de Habite-se</a></h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -404,9 +410,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=8pY9EIAJAH1X&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/documentos/" title="Visualização de Documentos" target="_blank">Visualização de Documentos</a></h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
