--- a/portalrbo/cidadao.html
+++ b/portalrbo/cidadao.html
@@ -31,7 +31,21 @@
   * Template Name: PMRBO
   ======================================================== -->
 </head>
+<body> <!-- Inicio do corpo da página -->
 
+  ... <!-- Conteúdo da página -->
+
+  <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
+</body> <!-- Fim do corpo da página -->
 <body class="index-page">
 
   <header id="header" class="header fixed-top">
