--- a/portalrbo/cidadao.html
+++ b/portalrbo/cidadao.html
@@ -171,6 +171,8 @@
         <p>Serviços Disponiveis aos contribuintes</p>
       </div><!-- End Section Title -->
 
+
+      
       <div class="container">
 
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
@@ -215,7 +217,7 @@
                         </div>
                         <div class="portfolio-info">
                         <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-boletim-de-cadastro-mobiliario/" title="Emissão do Boletim de Cadastro Mobiliário" target="_blank">Emissão do Boletim de Cadastro Imobiliário</a></h4>
-                        <p>A emissão do Boletim de Cadastro Imobiliário permite gerar relatórios detalhados sobre imóveis pelo portal do contribuinte.
+                        <p>O Boletim de Cadastro Imobiliário gera relatórios sobre imóveis pelo portal do contribuinte.
                         </div>
                         </div>
                         </div>
@@ -228,7 +230,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/emissao-boletim-de-cadastro-imobiliario/" title="Consulta de Imóveis e Emissão do Boletim de Cadastro Imobiliário" target="_blank">Consulta e Impressão de imóveis</a></h4>
-                  <p>O serviço de Consulta e Impressão de Imóveis permite que as pessoas acessem informações detalhadas sobre imóveis registrados e imprimam relatórios diretamente através do Portal do Contribuinte.</p>
+                  <p>O serviço de Consulta e Impressão de Imóveis permite acesso e impressão de relatórios no Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -240,7 +242,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/nota-avulsa/" title="Emissão/Consulta de Notas Fiscais Avulsas" target="_blank">Emissão/Consulta de Notas Fiscais Avulsas</a></h4>
-                  <p>O serviço de Emissão e Consulta de Notas Fiscais Avulsas disponibiliza a geração e o acompanhamento de notas fiscais através do Portal do Contribuinte.</p>
+                  <p>O serviço de Emissão e Consulta de Notas Fiscais Avulsas permite gerar e acompanhar notas no Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -252,7 +254,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://riobranco.g-mus.com.br/consultapaciente#laboratorio" title="Consulta dos Resultados de Exames Laboratoriais" target="_blank">Consulta de Exames Laboratoriais</a></h4>
-                  <p>O serviço de Consulta de Exames Laboratoriais permite aos contribuintes acessar de forma rápida e prática os resultados de exames realizados em unidades de saúde vinculadas ao Sistema Único de Saúde (SUS) através do Portal do Contribuinte. </p>
+                  <p>O serviço de Consulta de Exames Laboratoriais permite rápido acesso aos resultados via Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -263,8 +265,8 @@
                 <img src="https://img.icons8.com/?size=100&id=66302&format=png" class="img-fluid" alt="">
                 </div>
                 <div class="portfolio-info">
-                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/empresas/" title="Consulta e Emissão de Alvarás" target="_blank">Emissão de Alvará</a></h4>
-                  <p>O serviço de Emissão de Alvará permite que empresários e gestores de empresas solicitem e obtenham alvarás necessários para o funcionamento de seus negócios dentro do município.</p>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/empresas/" title="Consulta e Emissão de Alvarás" target="_blank">Emissão de Alvará </a></h4>
+                  <p>O serviço de Emissão de Alvará permite que empresários obtenham alvarás essenciais no município.  </p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -276,7 +278,7 @@
               </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/consulta-de-debitos/" title="Consulta e Emissão de Dívidas para a Quitação de Débitos" target="_blank">Consulta de Débitos</a></h4>
-                  <p>O serviço de Consulta de Débitos oferece ao contribuinte a possibilidade de verificar e acompanhar suas pendências financeiras com a prefeitura de maneira rápida e prática através do Portal do Contribuinte</p>
+                  <p>O serviço de Consulta de Débitos permite verificar e acompanhar pendências financeiras pelo Portal do Contribuinte.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
