--- a/portalrbo/cidadao.html
+++ b/portalrbo/cidadao.html
@@ -422,9 +422,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-product">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-product">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=gwBVa78gh2HU&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/lancamento-iss-fora-municipio/" title="Lançamento de ISSQN Fora do Município" target="_blank">ISSQN Fora do Município</a></h4>
                   <p>Registre o Imposto Sobre Serviços (ISSQN) para serviços prestados fora do município diretamente pelo Portal do Contribuinte</p>
@@ -432,9 +434,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=122811&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/centros-atendimento/" title="Centros de Atendimento ao Cidadão – CAC’s" target="_blank">Centros de Atendimento ao Cidadão – CAC’s</a></h4>
                   <p>Encontre informações sobre os Centros de Atendimento ao Cidadão (CAC’s), incluindo endereços, horários de atendimento e telefone para contato.</p>
@@ -442,19 +446,23 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=zCronTATOSuF&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
-                  <h4><a href="#" title="Processo de Reularização de Construção" target="_blank">Processo de Reularização de Construção</a></h4>
+                  <h4><a href="#" title="Processo de Reularização de Construção" target="_blank">Processo de Regularização de Construção</a></h4>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 </div>
               </div> 
             </div><!-- End Portfolio Item -->
 
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+              <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=5iACQbjkgT9N&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/requerimento-licenca-ambiental/novo/" title="Requerimento de Licença Ambiental" target="_blank">Requerimento de Licença Ambiental</a></h4>
                   <p>Solicite a licença ambiental necessária para suas atividades diretamente pelo Portal do Contribuinte, preenchendo o formulário e enviando a documentação exigida.</p>
@@ -462,9 +470,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=46470&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/solicitacao-alvara-imediato/listar/" title="Solicitações de Alvará Imediato" target="_blank">Solicitações de Alvará Imediato</a></h4>
                   <p>Solicite e obtenha seu alvará de funcionamento rapidamente pelo Portal do Contribuinte, com emissão imediata após o preenchimento do formulário e envio dos documentos necessários. </p>
@@ -472,9 +482,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-branding">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=tLxHLf42LiW1&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/requerimento-licenciamento-etr/" title="Requerimento de Licenciamento para Estação Transmissora de Radiocomunicação - ETR" target="_blank">Requerimento de Licenciamento para Estação Transmissora de Radiocomunicação - ETR</a></h4>
                   <p>Solicite o licenciamento para sua Estação Transmissora de Radiocomunicação (ETR) diretamente pelo portal da prefeitura, preenchendo o formulário e enviando a documentação necessária.</p>
@@ -482,19 +494,23 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=23293&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/atualizacao-de-cadastro-acesso/" title="Atualização Cadastral" target="_blank">Atualização Cadastral</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Atualização cadastral do cidadão no Portal do Contribuinte</p>
                 </div>
               </div> 
             </div><!-- End Portfolio Item -->
 
-              <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
+              <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-books">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=108298&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/usuario-saud/cadastro/" title="Cadastro de Usuário do SAUD" target="_blank">Cadastro de Usuário do SAUD</a></h4>
                   <p>Faça a solicitação ou altere o cadastro de usuário SAUD diretamente pelo Portal do Contribuinte.</p>
@@ -502,9 +518,11 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
-              <div class="portfolio-content h-100">
-                <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+            <div class="col-lg-3 col-md-4 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-10">
+                <div class="d-flex justify-content-center">
+                <img src="https://img.icons8.com/?size=100&id=QuEM7y66zzw4&format=png" class="img-fluid" alt="">
+                </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/credor/primeiro-acesso/" title="Solicitação/Alteração de Cadastro de Credor" target="_blank">Solicitação/Alteração de Cadastro de Credor</a></h4>
                   <p>Solicite e obtenha seu alvará de funcionamento rapidamente pelo Portal do Contribuinte. </p>
