--- a/portalrbo/index.html
+++ b/portalrbo/index.html
@@ -503,7 +503,7 @@
                 <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/atualizacao-de-cadastro-acesso/" title="Atualização Cadastral" target="_blank">Atualização Cadastral</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <p>Atualização cadastral do cidadão no Portal do Contribuinte</p>
                 </div>
               </div> 
             </div><!-- End Portfolio Item -->
