--- a/portalrbo/cidadao.html
+++ b/portalrbo/cidadao.html
@@ -289,8 +289,8 @@
                 <img src="assets/img/portfolio/ITBI.png" class="img-fluid" alt="">
                 </div>
                 <div class="portfolio-info">
-                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/itbis/" title="Consulta e Emissão de Laudos de ITBI" target="_blank">Emissão de Laudos de ITBI (Imposto de Transmissão de Bens Imóveis)</a></h4>
-                  <p>O serviço de Emissão de Laudos de ITBI permite que o contribuinte solicite e obtenha laudos técnicos referentes ao ITBI, um imposto municipal incidente sobre a transferência de imóveis. </p>
+                  <h4><a href="https://portalcidadao.riobranco.ac.gov.br/itbis/" title="Consulta e Emissão de Laudos de ITBI" target="_blank">Emissão de Laudos de ITBI</a></h4>
+                  <p>O serviço de Emissão de Laudos de ITBI permite solicitar e obter laudos técnicos sobre a transferência de imóveis.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -302,7 +302,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/solicitacao-de-certidao/" title="Emissão de Certidão" target="_blank">Emissão de Certidão</a></h4>
-                  <p>O serviço de Emissão de Certidão permite que os cidadãos solicitem e obtenham certidões negativas e positivas relacionadas a bens imóveis ou débitos, bem como certidões de cadastro imobiliário, diretamente pelo portal da prefeitura.</p>
+                  <p>O serviço de Consulta e Emissão de Processos permite acesso a informações detalhadas de processos na prefeitura.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -326,7 +326,7 @@
                 </div>
                 <div class="portfolio-info">
                   <h4><a href="https://portalcidadao.riobranco.ac.gov.br/consulta-de-protocolo/" title="Consulta e Emissão de Processos" target="_blank">Localização de Processos</a></h4>
-                  <p>O serviço de Consulta e Emissão de Processos permite a acesso às informações detalhadas e atualizadas sobre processos registrados na prefeitura.</p>
+                  <p>O serviço de Consulta e Emissão de Processos permite acesso a informações detalhadas e atualizadas de processos na prefeitura.</p>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
